--- a/sobre.css
+++ b/sobre.css
@@ -1,7 +1,12 @@
 body {
     font-family: "Helvetica", "Lucida Grande", sans-serif;
-    width: 940px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+
+    font-size: 16px;
+    width: 80%;
+    line-height: 1.5;
+    color: #3D3D3D;
 }
 
 .subtitulo {
@@ -59,4 +64,31 @@ figure img {
 
 .contato__info-descricao {
     margin-left: 10px;
+}
+
+.contato__secao {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 16px;
+}
+
+.contato__secao--telefone {
+    margin-left: 32px;
+}
+
+.rodape {
+
+    padding: 1.75em 0;
+    font-size: 1.1rem
+}
+
+.rodape__logo {
+
+    width: 6em
+}
+
+.rodape__copyright {
+    display: inline;
+    margin-left: 1em;
+
 }
